--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
-<!DOCTYPE html><html lang=en><head><meta charset=utf-8>
+<!DOCTYPE html><html lang=en>
+  <head><meta charset=utf-8>
   <meta http-equiv=X-UA-Compatible content="IE=edge">
   <meta name=viewport content="width=device-width,initial-scale=1">
-  <link rel=icon href=/weather-vue/favicon.ico><title>vue-weather</title>
+  <link rel=icon href=/weather-vue/favicon.ico>
+    <title>vue-weather</title>
   <link href=/weather-vue/css/app.798a3022.css rel=preload as=style>
   <link href=/weather-vue/js/app.2619017d.js rel=preload as=script>
   <link href=/weather-vue/js/chunk-vendors.090b6a33.js rel=preload as=script>
