--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
   <link href=/weather-vue/css/app.798a3022.css rel=stylesheet></head>
   <body><noscript>
     <strong>We're sorry but vue-weather doesn't work properly without JavaScript enabled. Please enable it to continue.
-    </strong></noscript><div id=app></div><script src=/weather-vue/js/chunk-vendors.090b6a33.js>
+    </strong></noscript><div id=app></div>
+    <script src=/weather-vue/js/chunk-vendors.090b6a33.js>
     </script><script src=/weather-vue/js/app.2619017d.js></script></body></html>
